fix: Ajuste de métodos